Update 'csnklsqfx-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:07a5eaa6ffb928552c237467cc6b502b89356357@sha256:3f94ec5026d1ec50e6b11d988c825b73f3f3b5d8440b74f541d9caab7c7eff0e

--- a/components/csnklsqfx-python/overlays/development/deployment-patch.yaml
+++ b/components/csnklsqfx-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: csnklsqfx-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:07a5eaa6ffb928552c237467cc6b502b89356357@sha256:3f94ec5026d1ec50e6b11d988c825b73f3f3b5d8440b74f541d9caab7c7eff0e
+          name: container-image
